budgeto/budgeto-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgeto-client-deployment
  labels:
    app: budgeto-client
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: budgeto-client 
  template:
    metadata:
      labels:
        app: budgeto-client
    spec:
      containers:
      - name: budgeto-client
        image: ahoobing1976/budgeto-client:1
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
