budgeto/budgeto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgeto-deployment
  labels:
    app: budgeto 
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: budgeto 
  template:
    metadata:
      labels:
        app: budgeto 
    spec:
      containers:
      - name: budgeto-client
        image: ahoobing1976/budgeto-client:1
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
      - name: budgeto-server
        image: ahoobing1976/budgeto-server:1
        ports:
        - containerPort: 4000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
