budgeto/clientlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgeto-client-lb
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-size-unit: "3"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
spec:
  type: LoadBalancer
  selector:
    app: budgeto-client
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
