budgeto/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - name: traefik
      port: 9500
      targetPort: 9100
  type: LoadBalancer
  selector:
    app: traefik
