budgeto/serverlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgeto-server-lb 
spec:
  selector:
    app: budgeto-server
  ports:
    - name: server
      protocol: TCP
      port: 4000 
      targetPort: 4000 
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.86.239
